--- a/src/index.css
+++ b/src/index.css
@@ -65,11 +65,17 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: 'Special Elite', cursive;
+    font-family: 'Special Elite', 'Courier New', Courier, monospace;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
 @layer utilities {
+  .font-display {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
   .text-crimson {
     color: hsl(var(--crimson));
   }
